--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.8",
     "socket.io-client": "^4.5.2",
     "sweetalert2": "^11.4.35",
     "typescript": "^4.8.3",
