--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.13",
+    "react-tooltip": "^5.21.5",
     "socket.io-client": "^4.5.2",
     "sweetalert2": "^11.4.35",
     "typescript": "^4.8.3",
