--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.59",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "html5-qrcode": "^2.3.8",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
