--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.59",
     "axios": "^0.27.2",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "formik": "^2.2.9",
     "html5-qrcode": "^2.3.8",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
